--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -102,6 +102,7 @@ if(SLANG_ENABLE_EXAMPLES AND SLANG_ENABLE_SLANG_RHI)
     example(cpu-hello-world)
     example(gpu-printing)
     example(hello-world LINK_WITH_PRIVATE Vulkan-Headers)
+    example(hello-world-metal)
     example(model-viewer WIN32_EXECUTABLE)
     example(platform-test WIN32_EXECUTABLE)
     example(ray-tracing WIN32_EXECUTABLE)
