Build hello-world-metal only on macOS
Check that cmake variable is true to build
hello-world-metal.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -102,7 +102,9 @@ if(SLANG_ENABLE_EXAMPLES AND SLANG_ENABLE_SLANG_RHI)
     example(cpu-hello-world)
     example(gpu-printing)
     example(hello-world LINK_WITH_PRIVATE Vulkan-Headers)
-    example(hello-world-metal)
+    if(APPLE)
+        example(hello-world-metal)
+    endif()
     example(model-viewer WIN32_EXECUTABLE)
     example(platform-test WIN32_EXECUTABLE)
     example(ray-tracing WIN32_EXECUTABLE)
